--- a/project-1/variation_09.html
+++ b/project-1/variation_09.html
@@ -9,31 +9,21 @@
   </head>
 
   <body>
-  <i>by Augusto de Campos<i>
+  by Augusto de Campos
 
    <style>
 
     body {
       color:black ;
-      font-family: "Lucida Grande", Courier, Sans-sarif;
+      font-family: monospace;, Courier, Sans-sarif;
       background-color: white;
-      font-size: 0.6em
+      font-size: 12pt;
 
     </style>
 
-  <span style ="position:absolute;bottom:30px;right:10px;bottom:10px;font-size: 3em">
+  <span style ="position:absolute;bottom:30px;right:10px;bottom:10px;font-size: 13pt;">
   <br>&nbsp&nbsp&nbsp&nbsp&nbsp f  &nbsp&nbsp&nbsp  ormat<br>re &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  format<br>dis  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  format<br>tran  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  s  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  format<br>confo  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  rm   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  a  &nbsp&nbsp&nbsp&nbsp&nbsp  t<br>informat<br>format</br></span>
     
-   <p style="display: block; 
-             position: fixed; 
-             bottom: 3em; left: 2em; 
-             color: black;">
-   <a style="text-decoration: none; 
-             color: #ddd">&#8592;</a> 
- | <a style="text-decoration: none; 
-             color: blue" 
-             href="variation_10.html">&#8594;</a>
-   </p>
 
    </body>
 
