--- a/project-1/variation_10.html
+++ b/project-1/variation_10.html
@@ -15,13 +15,15 @@
 
     body {
       color:black;
-      font-family: "mono type", Courier, sarif;
+      font-family: monospace, Courier, sarif;
       background-color: white;
-      font-size: 0.8em
+      font-size: 10pt;
       
     </style>
 
-  <span style ="position:absolute;right:20px;top:10px;font-size: 2em">
+  <span style ="position:absolute;right:20px;top:10px;font-size: 12pt">
+  <bdo dir="rtl">
+  <u>
   <br>&nbsp&nbsp&nbsp&nbsp&nbsp f  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <p> ormat </p>
   <br>re &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  format<br>
   dis  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  format
@@ -29,17 +31,8 @@
   &nbsp&nbsp&nbsp&nbsp<br>confo  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp rm   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  a  &nbsp&nbsp  t
   <br>informat
   <p>format</p></span>
-    
-   <p style="display: block; 
-             position: fixed; 
-             bottom: 3em; left: 2em; 
-             color: black;">
-   <a style="text-decoration: none; 
-             color: #ddd">&#8592;</a> 
- | <a style="text-decoration: none; 
-             color: blue" 
-             href="variation_11.html">&#8594;</a>
-   </p>
+  </bdo>
+  </u>
 
    </body>
 
