--- a/project-1/variation_11.html
+++ b/project-1/variation_11.html
@@ -14,31 +14,59 @@
       color:black;
       font-family: "mono type", Courier, sarif;
       background-color: white;
-      font-size: 0.8em
+      font-size: 12pt;
       
     </style>
 
   <body>
-   <p> f&nbsp&nbsp&nbsp&nbsp o&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp a&nbsp&nbsp&nbsp&nbsp r </p>
-   <p> r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp e&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp f&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  o&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp a&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  </p>
-   <p> d&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp i&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp s&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp f&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp o&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp a </p>
-   <p> t&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp a&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp n&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp s&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp f&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp o&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp a </p>
-   <p> c&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp o&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp n&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp f&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp o&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspa </p>
-   <p> i&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp n&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp f&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp o&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp a </p>
-   <p> f&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp o &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp a </p>
+
+<table border=“0.4"> 
+  <tr>
+  <td>
+  f&nbsp&nbsp&nbsp&nbsp o&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp a&nbsp&nbsp&nbsp&nbsp r
+  </td>
+  </tr>
+
+<tr>
+  <td> 
+  r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp e&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp f&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  o&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp a&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  </td>
+</tr>
+
+   <tr>
+  <td>
+   d&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp i&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp s&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp f&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp o&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp a
+  </td>
+  </tr>
+
+<tr>
+  <td>
+    t&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp a&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp n&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp s&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp f&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp o&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp a
+   </td>
+  </tr>
+
+<tr>
+  <td>
+    c&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp o&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp n&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp f&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp o&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspa
+      </td>
+  </tr>
+
+<tr>
+  <td>
+   i&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp n&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp f&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp o&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp a
+      </td>
+  </tr>
+
+<tr>
+  <td>
+  f&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp o &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp m&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp a
+        </td>
+  </tr>
+
+
+   </table>
 
    <p> <br><br><br> Augusto de campos </p>
-    
-   <p style="display: block; 
-             position: fixed; 
-             bottom: 3em; left: 2em; 
-             color: black;">
-   <a style="text-decoration: none; 
-             color: #ddd">&#8592;</a> 
- | <a style="text-decoration: none; 
-             color: blue" 
-             href="variation_12.html">&#8594;</a>
-   </p>
 
    </body>
 
